# FOGLTLOGLES

./: .clangd  .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  README.md  build-android.sh  build.sh  meson.build  meson_options.txt
.devcontainer/: devcontainer.json
.github/workflows/: debug.yml  update_submodules.yml
.gitpod/: Dockerfile
android/: armeabi-v7a.ini  build-android.sh  build-android.sh.orig
build_info/: GenerateBuildInfo.cmake  build_info.h.in  build_info.hpp
include/: main.h  main.hpp  utils.h
include/egl/: egl.h  egl.hpp
include/es/: basevertex.h  basevertex.hpp  binding_saver.h  dsa.h  ffp.h  ffp.hpp  framebuffer.h  framebuffer.hpp  limits.h  limits.hpp  multidraw.h  multidraw.hpp  proxy.h  proxy.hpp  raii_helpers.hpp  renderbuffer.h  renderbuffer.hpp  shader.h  state_tracking.h  state_tracking.hpp  swizzling.h  swizzling.hpp  texparam.h  texparam.hpp  texture.h  texture.hpp  utils.h  utils.hpp  validation.h  vertexattrib.h  vertexattrib.hpp
include/es/ffpe/: draw.h  draw.hpp  immediate.h  immediate.hpp  lists.hpp  matrices.h  matrices.hpp  shadergen.h  states.hpp  uniforms.h  vao.h  vao.hpp
include/es/ffpe/shadergen/: alphatest.h  cache.h  cache.hpp  common.h  common.hpp  feature.h  main.h  main.hpp  shadergen.h  uniforms.h  uniforms.hpp
include/es/ffpe/shadergen/features/: alphatest.h  alphatest.hpp  base.h  base.hpp  fog.hpp  mvp.hpp  registry.h  registry.hpp  texture.h  texture.hpp  vertexbuffer.hpp
include/ffp/: main.h
include/gl/: gl.h  gl.hpp  glext.h  header.h  shader.h  shader.hpp  types.h
include/gles/: draw_overrides.hpp  main.h  main.hpp
include/gles/ffp/: arrays.h  arrays.hpp  enums.h  enums.hpp  main.h  main.hpp
include/gles20/: buffer_tracking.h  extensions.h  framebuffer_tracking.h  framebuffer_tracking.hpp  main.h  main.hpp  mappable.h  renderbuffer_tracking.h  shader_overrides.h  shader_overrides.hpp  texture_tracking.h  translation.h
include/gles20/ext/: ext_buffer_storage.h  main.h  main.hpp
include/gles30/: main.h  main.hpp  mappable.h  read_pixels.hpp  translation.h
include/gles32/: main.h  main.hpp
include/shader/: cache.h  cache.hpp  compilers.h  compilers.hpp  converter.h  converter.hpp  postprocess.h  postprocess.hpp  preprocess.h  preprocessor.h  utils.h  utils.hpp
include/utils/: api.h  compilers.h  constants.h  constants.hpp  conversion.h  conversions.h  convertions.h  defines.h  env.h  env.hpp  extensions.h  fast_map.h  gltypes.h  log.h  log.hpp  macros.h  macros.hpp  pointers.h  pointers.hpp  span.h  strings.h  strings.hpp  types.h  xxhash_map.h
include/wrappers/: base.h  types.h
src/: main.cpp
src/egl/: egl.cpp
src/ffp/: immediate.cpp  main.cpp  matrix.cpp  vertex.cpp
src/gl/: gl.cpp
src/gles/: branding.cpp  draw.cpp  main.cpp  no_error.cpp  textures.cpp  translated.cpp
src/gles/ffp/: alphatest.cpp  color.cpp  immediate.cpp  lists.cpp  main.cpp  matrix.cpp  stubs.cpp  texcoord.cpp  textures.cpp  vertex.cpp
src/gles/ffpe/: alphatest.cpp  arrays.cpp  color.cpp  fog.cpp  immediate.cpp  light.cpp  lists.cpp  main.cpp  matrix.cpp  normal.cpp  shading.cpp  stubs.cpp  texcoord.cpp  textures.cpp  vertex.cpp
src/gles20/: bind.cpp  buffer.cpp  extensions.cpp  framebuffer.cpp  main.cpp  mappable.cpp  multidraw.cpp  renderbuffer.cpp  shader.cpp  textures.cpp  tracking.cpp  translation.cpp
src/gles20/ext/: arb_buffer_storage.cpp  arb_compute_shader.cpp  arb_timer_query.cpp  ext_blend_func_extended.cpp  ext_buffer_storage.cpp  ext_draw_elements_base_vertex.cpp  ext_framebuffer_object.cpp  main.cpp  oes_mapbuffer.cpp
src/gles30/: basevertex.cpp  bind.cpp  buffer.cpp  bufstorage.cpp  dsa.cpp  framebuffer.cpp  main.cpp  mappable.cpp  multidraw.cpp  textures.cpp  translation.cpp  vertexattrib.cpp
src/gles32/: basevertex.cpp  framebuffer.cpp  main.cpp  textures.cpp
src/wrappers/: emulation.cpp  translation.cpp  wrapped.cpp
src/wrappers/gles20/: direct.cpp  emulated.cpp  emulation.cpp  redirect.cpp  translation.cpp  wrapped.cpp  wrapper.cpp
test/: CMakeLists.txt
tools/: clang++-ccache.sh  clang-ccache.sh  clangd  wrap-ccache.bat
translations/base/: base.h
translations/gles20/: direct.cpp  emulated.cpp  glclear.cpp  glclearcolor.cpp  glcleardepth.cpp  gldisable.cpp  glenable.cpp  glscissor.cpp  glviewport.cpp
translations/gles30/: glclientwaitsync.cpp  gldeletesync.cpp  glfencesync.cpp  glwaitsync.cpp
utils/: conversion.h  convertion.h  extensions.h
